deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facade-service
  labels:
    app: facade-service
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facade-service
  template:
    metadata:
      labels:
        app: facade-service
        env: dev
    spec:
      containers:
      - name: facade-service
        image: acrshtest.azurecr.io/facade-service:20220804.10
        imagePullPolicy: Always
        ports:
        - name:  http
          containerPort: 8080
          protocol: TCP
        #imagePullSecrets:
        #- name: acr-connection
