deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  facade-service
spec:
  selector:
    app:  facade-service
  type:  LoadBalancer
  ports:
  - name:  http
    port:  80
    targetPort: 8080
