deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facade-service
  annotations:
   kubernetes.io/ingress.class: addon-http-application-routing
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: face-service-ingress.8fefeba7fb624e1faca6.centralindia.aksapp.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: facade-service
              port:
                number: 8080
